--- a/understanding-ai-in-canada.html
+++ b/understanding-ai-in-canada.html
@@ -19,42 +19,44 @@
       padding: 0 1.5rem;
     }
 
-    h1, h2 {
-      color: #002145;
-    }
-
     h1 {
       font-size: 2.2rem;
-      margin-bottom: 1.2rem;
+      text-align: center;
+      color: #002145;
+      margin-bottom: 2rem;
     }
 
     h2 {
       font-size: 1.3rem;
       margin-top: 2rem;
+      color: #002145;
       border-left: 4px solid #002145;
       padding-left: 10px;
     }
 
     ul {
       padding-left: 1.3rem;
+      margin-top: 0.5rem;
     }
 
-    .box {
+    li {
+      margin-bottom: 0.5rem;
+    }
+
+    details {
       background-color: #ffffff;
       padding: 1.2rem 1.5rem;
-      border-radius: 12px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
-      margin-top: 1.5rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.06);
+      margin-bottom: 1.5rem;
     }
 
-    .resources a {
-      color: #002145;
-      text-decoration: none;
+    summary {
       font-weight: bold;
-    }
-
-    .resources a:hover {
-      text-decoration: underline;
+      font-size: 1.1rem;
+      color: #002145;
+      cursor: pointer;
+      margin-bottom: 0.5rem;
     }
 
     .resources {
@@ -64,8 +66,19 @@
       border-radius: 10px;
     }
 
-    li {
-      margin-bottom: 0.5rem;
+    .resources h2 {
+      font-size: 1.15rem;
+      margin-bottom: 1rem;
+    }
+
+    .resources a {
+      color: #1a2e3b;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .resources a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -73,53 +86,49 @@
   <div class="container">
     <h1>Understanding AI in Canada: Avoiding Bias and Fair Access for Newcomers</h1>
 
-    <div class="box">
-      <h2>What is AI?</h2>
-      <p>
-        AI (Artificial Intelligence) is technology that learns from huge amounts of data, including personal information,
-        to create things like text, images, or videos. For example, if you ask an AI tool to write a story, it might give
-        you a different version each time, even if you ask the same question.
-      </p>
-    </div>
+    <h2>What is AI?</h2>
+    <p>
+      AI (Artificial Intelligence) is technology that learns from huge amounts of data, including personal information,
+      to create things like text, images, or videos. For example, if you ask an AI tool to write a story, it might give
+      you a different version each time, even if you ask the same question.
+    </p>
 
-    <div class="box">
-      <h2>Why AI Matters in Canada</h2>
-      <p>
-        AI is changing every part of life in Canada. It can help solve big problems, like improving healthcare or fighting
-        climate change. It can also create new jobs and help the economy grow. But many people worry that AI is developing
-        too fast, making it hard to control its risks.
-      </p>
-    </div>
+    <h2>Why AI Matters in Canada</h2>
+    <p>
+      AI is changing every part of life in Canada. It can help solve big problems, like improving healthcare or fighting
+      climate change. It can also create new jobs and help the economy grow. But many people worry that AI is developing
+      too fast, making it hard to control its risks.
+    </p>
 
-    <div class="box">
-      <h2>Risks of AI for Newcomers</h2>
+    <details>
+      <summary>Risks of AI for Newcomers</summary>
       <ul>
         <li><strong>Bias and Discrimination:</strong> AI may favor people with “Canadian-sounding” names or exclude newcomers if trained on unfair data.</li>
         <li><strong>Privacy Concerns:</strong> AI often collects personal data, which could be misused or leaked.</li>
         <li><strong>Job Loss Fears:</strong> Some fear AI may replace human jobs in service or manufacturing roles.</li>
       </ul>
-    </div>
+    </details>
 
-    <div class="box">
-      <h2>What Canadians Think About AI</h2>
+    <details>
+      <summary>What Canadians Think About AI</summary>
       <ul>
         <li>Many people don’t fully understand how AI works or its limits.</li>
         <li>Hopes include better healthcare, education, and solutions to climate change.</li>
         <li>Fears include bias, privacy breaches, and job insecurity.</li>
       </ul>
-    </div>
+    </details>
 
-    <div class="box">
-      <h2>How to Make AI Fair for Everyone</h2>
+    <details>
+      <summary>How to Make AI Fair for Everyone</summary>
       <ul>
         <li><strong>Teach AI Basics:</strong> Everyone should learn how AI works — not just experts.</li>
         <li><strong>Fix Bias in Data:</strong> AI should be trained on fair, diverse data.</li>
         <li><strong>Include Everyone:</strong> Newcomers and vulnerable groups should be part of AI decisions.</li>
       </ul>
-    </div>
+    </details>
 
-    <div class="box">
-      <h2>Key Message for Newcomers</h2>
+    <details>
+      <summary>Key Message for Newcomers</summary>
       <p>
         AI can improve lives, but it must be used carefully. As a newcomer, you have the right to:
       </p>
@@ -128,15 +137,15 @@
         <li>Demand fairness if you suspect bias.</li>
         <li>Learn about AI to protect yourself and your community.</li>
       </ul>
-    </div>
+    </details>
 
-    <div class="box">
-      <h2>Why This Matters to You</h2>
+    <details>
+      <summary>Why This Matters to You</summary>
       <p>
         AI is everywhere in Canada. Understanding it helps you avoid unfair treatment, protect your privacy,
         and use technology safely. Stay curious, ask questions, and seek resources to stay informed!
       </p>
-    </div>
+    </details>
 
     <div class="resources">
       <h2>Suggested Resources</h2>
